--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "node-sass": "^4.10.0",
     "react": "^16.6.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
@@ -24,7 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "react-addons-css-transition-group": "^15.6.2"
-  }
+  "proxy": "http://localhost:8000"
 }
