--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon src/server/server.js",
+    "start": "node src/server/server.js",
     "heroku-postbuild": "cd src/client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
